[build-system]
requires = [
    'setuptools',
    'meson-python',
    'numpy',
    'compilers',
    'cython<3',
    'numpy',
    'scipy',
    'matplotlib',
    'networkx',
    'sqlalchemy',
    'pyro4',
    'pyopengl',
    'PyQt5',
    'brewer2mpl',
    'munkres',
    'pynose',
]
build-backend = 'mesonpy'
