[build-system]
requires = [
    'setuptools',
    'meson-python',
    'numpy',
    'cython==3',
    'PyQt5',
]
build-backend = 'mesonpy'

[project]
name = "pele"
dependencies = [
    'numpy',
    'cython==3',
    'scipy',
    'matplotlib',
    'networkx',
    'sqlalchemy',
    'pyro4',
    'pyopengl',
    'PyQt5',
    'brewer2mpl',
    'munkres',
]
requires-python = ">= 3.9"
readme = "README.rst"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*", "COPYING"]
version = "0.1.1"

[project.optional-dependencies]
testing = [
    'pynose',
]
