py.install_sources(
    '__init__.py',
    'basinhopping.py',
    'config.py',
    'exceptions.py',
    'mc.py',
    'test_basinhopping.py',
    'version.py',
    subdir: 'pele',
)

py.install_sources(
    'gui/MainWindow.py',
    'gui/__init__.py',
    'gui/_cv_viewer.py',
    'gui/_list_views.py',
    'gui/_rate_gui.py',
    'gui/bhrunner.py',
    'gui/connect_all.py',
    'gui/connect_explorer_dlg.py',
    'gui/connect_explorer_ui.py',
    'gui/connect_run_dlg.py',
    'gui/dlg_params.py',
    'gui/double_ended_connect_runner.py',
    'gui/graph_viewer.py',
    'gui/neb_explorer.py',
    'gui/nebdlg.py',
    'gui/normalmode_browser.py',
    'gui/pymol_viewer.py',
    'gui/run.py',
    'gui/show3d.py',
    'gui/show3d_with_slider.py',
    'gui/takestep_explorer.py',
    'gui/ui_params.py',
    subdir: 'pele/gui',
)

py.install_sources(
    'accept_tests/__init__.py',
    'accept_tests/dont_leave_basin.py',
    'accept_tests/metropolis.py',
    'accept_tests/spherical_container.py',
    subdir: 'pele/accept_tests',
)

py.install_sources(
    'storage/__init__.py',
    'storage/database.py',
    'storage/savenlowest.py',
    subdir: 'pele/storage',
)

py.install_sources(
    'amber/__init__.py',
    'amber/amberSystem.py',
    'amber/coords2pdb.py',
    'amber/gmin_potential.py',
    'amber/internal_coords.py',
    'amber/measure.py',
    'amber/openmm_potential.py',
    'amber/read_amber.py',
    'amber/sanity_checks.py',
    subdir: 'pele/amber',
)

py.install_sources(
    'angleaxis/__init__.py',
    'angleaxis/_aa_utils.py',
    'angleaxis/_otp_bulk.py',
    'angleaxis/_otp_cluster.py',
    'angleaxis/aamindist.py',
    'angleaxis/aaperiodicttransforms.py',
    'angleaxis/aasystem.py',
    'angleaxis/aatopology.py',
    'angleaxis/bulk_rigid_mindist.py',
    'angleaxis/molecules.py',
    'angleaxis/rigidbody.py',
    subdir: 'pele/angleaxis',
)

py.install_sources(
    'mindist/__init__.py',
    'mindist/_minpermdist_policies.py',
    'mindist/_pointgrouporder.py',
    'mindist/_wrapper_atomiccluster.py',
    'mindist/backward_compatibility.py',
    'mindist/exact_match.py',
    'mindist/minpermdist_stochastic.py',
    'mindist/periodic_exact_match.py',
    'mindist/periodic_mindist.py',
    'mindist/permutational_alignment.py',
    'mindist/rmsfit.py',
    subdir: 'pele/mindist',
)

py.install_sources(
    'utils/__init__.py',
    'utils/amber.py',
    'utils/benchmark.py',
    'utils/disconnectivity_graph.py',
    'utils/elements.py',
    'utils/events.py',
    'utils/fix_multiprocessing.py',
    'utils/frozen_atoms.py',
    'utils/hessian.py',
    'utils/histogram.py',
    'utils/neighbor_list.py',
    'utils/optim_compatibility.py',
    'utils/pymolwrapper.py',
    'utils/rbtools.py',
    'utils/rotations.py',
    'utils/statistics.py',
    'utils/vec3.py',
    'utils/xyz.py',
    subdir: 'pele/utils',
)

py.install_sources(
    'potentials/ATLJ.py',
    'potentials/__init__.py',
    'potentials/_fin_sin.py',
    'potentials/_gupta.py',
    'potentials/_sutton_chen.py',
    'potentials/gminpotential.py',
    'potentials/heisenberg_spin.py',
    'potentials/heisenberg_spin_RA.py',
    'potentials/lj.py',
    'potentials/lj_simple.py',
    'potentials/ljcut.py',
    'potentials/ljpshiftfast.py',
    'potentials/ml.py',
    'potentials/morse.py',
    'potentials/potential.py',
    'potentials/xyspin.py',
    subdir: 'pele/potentials',
)

py.install_sources(
    'landscape/__init__.py',
    'landscape/_distance_graph.py',
    'landscape/_graph.py',
    'landscape/_smooth_path.py',
    'landscape/connect_manager.py',
    'landscape/connect_min.py',
    'landscape/local_connect.py',
    'landscape/singleended.py',
    subdir: 'pele/landscape',
)

py.install_sources(
    'optimize/__init__.py',
    'optimize/_fire.py',
    'optimize/_lbfgs_py.py',
    'optimize/_mylbfgs.py',
    'optimize/_quench.py',
    'optimize/optimization_exceptions.py',
    'optimize/result.py',
    subdir: 'pele/optimize',
)

py.install_sources(
    'transition_states/_NEB.py',
    'transition_states/__init__.py',
    'transition_states/_dimer_translator.py',
    'transition_states/_find_lowest_eig.py',
    'transition_states/_generalized_dimer.py',
    'transition_states/_generalized_hef.py',
    'transition_states/_interpolate.py',
    'transition_states/_nebdriver.py',
    'transition_states/_orthogopt.py',
    'transition_states/_transition_state_refinement.py',
    'transition_states/_transverse_walker.py',
    'transition_states/_tstools.py',
    'transition_states/_zeroev.py',
    subdir: 'pele/transition_states',
)

py.install_sources(
    'rates/__init__.py',
    'rates/_kmc.py',
    'rates/_rate_calculations.py',
    'rates/_rates.py',
    'rates/_rates_linalg.py',
    subdir: 'pele/rates',
)

py.install_sources(
    'thermodynamics/__init__.py',
    'thermodynamics/_normalmodes.py',
    'thermodynamics/_utils.py',
    'thermodynamics/heat_capacity.py',
    subdir: 'pele/thermodynamics',
)

py.install_sources(
    'systems/__init__.py',
    'systems/_opengl_tools.py',
    'systems/basesystem.py',
    'systems/blj_bulk.py',
    'systems/blj_bulk_frozen.py',
    'systems/bljcluster.py',
    'systems/cluster.py',
    'systems/ljcluster.py',
    'systems/ljcluster_frozen.py',
    'systems/molecularsystem.py',
    'systems/morse_bulk.py',
    'systems/morse_cluster.py',
    'systems/oxdna.py',
    'systems/pspin_spherical_system.py',
    'systems/spawn_OPTIM.py',
    subdir: 'pele/systems',
)

py.install_sources(
    'takestep/__init__.py',
    'takestep/adaptive.py',
    'takestep/adaptive_step_temperature.py',
    'takestep/buildingblocks.py',
    'takestep/displace.py',
    'takestep/generic.py',
    'takestep/group.py',
    'takestep/particle_exchange.py',
    subdir: 'pele/takestep',
)

py.install_sources(
    'concurrent/__init__.py',
    'concurrent/_connect_server.py',
    subdir: 'pele/concurrent',
)

py.install_sources(
    'gui/ui/__init__.py',
    'gui/ui/connect_run_ui.py',
    'gui/ui/cv_viewer_ui.py',
    'gui/ui/dgraph_browser.py',
    'gui/ui/dgraph_dlg.py',
    'gui/ui/graph_view_ui.py',
    'gui/ui/mplwidget.py',
    'gui/ui/nebbrowser.py',
    'gui/ui/rate_gui.py',
    'gui/ui/resources_rc.py',
    'gui/ui/show3d_with_slider_ui.py',
    'gui/ui/ui_neb_explorer.py',
    'gui/ui/ui_normalmode_explorer.py',
    'gui/ui/ui_takestep_explorer.py',
    subdir: 'pele/gui/ui',
)

py.install_sources(
    'gui/pymolwidget/pymolwidget.py',
    subdir: 'pele/gui/pymolwidget',
)

py.install_sources(
    'accept_tests/tests/__init__.py',
    'accept_tests/tests/dont_leave_basin_test.py',
    'accept_tests/tests/spherical_container_test.py',
    subdir: 'pele/accept_tests/tests',
)

py.install_sources(
    'storage/tests/__init__.py',
    'storage/tests/test_database.py',
    subdir: 'pele/storage/tests',
)

py.install_sources(
    'amber/obsolete/pdb2permlist.py',
    subdir: 'pele/amber/obsolete',
)

py.install_sources(
    'angleaxis/tests/__init__.py',
    'angleaxis/tests/test_aa_utils.py',
    'angleaxis/tests/test_aamindist.py',
    'angleaxis/tests/test_atom_indices.py',
    'angleaxis/tests/test_bulk_otp.py',
    'angleaxis/tests/test_bulk_rigid_mindist.py',
    'angleaxis/tests/test_otp.py',
    subdir: 'pele/angleaxis/tests',
)

py.install_sources(
    'mindist/tests/__init__.py',
    'mindist/tests/minpermdist_stochastic_test.py',
    'mindist/tests/permutational_alignment_test.py',
    'mindist/tests/test_exact_match_cluster.py',
    'mindist/tests/test_periodic_exact_match.py',
    'mindist/tests/test_periodic_mindist.py',
    'mindist/tests/test_point_group_order.py',
    'mindist/tests/test_rotational_alignment.py',
    'mindist/tests/testmindist.py',
    subdir: 'pele/mindist/tests',
)

py.install_sources(
    'utils/tests/__init__.py',
    'utils/tests/test_disconnectivity_graph.py',
    'utils/tests/test_frozen_potential.py',
    'utils/tests/test_hessian_eigs.py',
    'utils/tests/test_optim_compatibility.py',
    'utils/tests/test_rotations.py',
    'utils/tests/test_signal.py',
    subdir: 'pele/utils/tests',
)

py.install_sources(
    'potentials/test_functions/__init__.py',
    'potentials/test_functions/_beale.py',
    'potentials/test_functions/_booth.py',
    subdir: 'pele/potentials/test_functions',
)

py.install_sources(
    'potentials/fortran/__init__.py',
    subdir: 'pele/potentials/fortran',
)

py.install_sources(
    'potentials/tests/__init__.py',
    'potentials/tests/_base_test.py',
    'potentials/tests/test_atlj.py',
    'potentials/tests/test_beale.py',
    'potentials/tests/test_blj_cpp.py',
    'potentials/tests/test_booth.py',
    'potentials/tests/test_finsin.py',
    'potentials/tests/test_gupta.py',
    'potentials/tests/test_hs_wca_cpp.py',
    'potentials/tests/test_hs_wca_frozen.py',
    'potentials/tests/test_inversepower_cpp.py',
    'potentials/tests/test_inversepower_stillinger_cpp.py',
    'potentials/tests/test_inversepower_stillinger_cut_cpp.py',
    'potentials/tests/test_lj.py',
    'potentials/tests/test_lj_cpp.py',
    'potentials/tests/test_ljcut.py',
    'potentials/tests/test_ml.py',
    'potentials/tests/test_morse_cpp.py',
    'potentials/tests/test_python_cpp_wrapper.py',
    'potentials/tests/test_spin_systems.py',
    'potentials/tests/test_wca_cpp.py',
    subdir: 'pele/potentials/tests',
)

py.install_sources(
    'landscape/tests/__init__.py',
    'landscape/tests/test_connect_manager.py',
    'landscape/tests/test_distance_graph.py',
    'landscape/tests/test_double_ended_connect.py',
    'landscape/tests/test_graph.py',
    'landscape/tests/test_smooth_path.py',
    subdir: 'pele/landscape/tests',
)

py.install_sources(
    'optimize/tests/__init__.py',
    'optimize/tests/test_lbfgs.py',
    'optimize/tests/test_lbfgs_cpp.py',
    'optimize/tests/test_modified_fire_cpp.py',
    'optimize/tests/test_mylbfgs.py',
    'optimize/tests/test_mylbfgs_vs_lbfgs.py',
    'optimize/tests/test_nfev.py',
    'optimize/tests/test_with_functions.py',
    'optimize/tests/test_wrappers.py',
    subdir: 'pele/optimize/tests',
)

py.install_sources(
    'transition_states/tests/__init__.py',
    'transition_states/tests/test_NEB.py',
    'transition_states/tests/test_dimer_translator.py',
    'transition_states/tests/test_eig_pot.py',
    'transition_states/tests/test_find_lowest_eigenvector.py',
    'transition_states/tests/test_find_transition_state_hef.py',
    'transition_states/tests/test_generalized_dimer.py',
    'transition_states/tests/test_generalized_hef.py',
    'transition_states/tests/test_interpolate.py',
    'transition_states/tests/test_orthogopt.py',
    'transition_states/tests/test_pushoff.py',
    'transition_states/tests/test_transition_state_search.py',
    'transition_states/tests/test_transverse_walker.py',
    subdir: 'pele/transition_states/tests',
)

py.install_sources(
    'transition_states/nebtesting/__init__.py',
    'transition_states/nebtesting/leps.py',
    subdir: 'pele/transition_states/nebtesting',
)

py.install_sources(
    'rates/tests/__init__.py',
    'rates/tests/test_cpp_ngt.py',
    'rates/tests/test_graph_transformation.py',
    'rates/tests/test_graph_transformation_minima.py',
    'rates/tests/test_kmc.py',
    'rates/tests/test_linalg.py',
    subdir: 'pele/rates/tests',
)

py.install_sources(
    'thermodynamics/tests/__init__.py',
    'thermodynamics/tests/test_heat_capacity.py',
    'thermodynamics/tests/test_normalmodes.py',
    subdir: 'pele/thermodynamics/tests',
)

py.install_sources(
    'systems/tests/__init__.py',
    'systems/tests/test_blj_bulk.py',
    'systems/tests/test_blj_bulk_frozen.py',
    'systems/tests/test_bljcluster.py',
    'systems/tests/test_frozen_lj.py',
    'systems/tests/test_ljcluster.py',
    'systems/tests/test_morse_cluster.py',
    subdir: 'pele/systems/tests',
)

py.install_sources(
    'takestep/tests/__init__.py',
    'takestep/tests/test_building_blocks.py',
    'takestep/tests/test_group_takestep.py',
    'takestep/tests/test_particle_exchange.py',
    'takestep/tests/test_takestep.py',
    subdir: 'pele/takestep/tests',
)

subdir('accept_tests')
subdir('angleaxis')
subdir('mindist')
subdir('optimize')
subdir('potentials')
subdir('rates')
subdir('transition_states')
subdir('utils')
