
py.extension_module(
    '_cython_tools',
    ['_cython_tools.pyx', ],
    include_directories: [inc_np, inc_pele],
    dependencies : [py_dep, pele_dep, cython_compile_dep,],
    install: true,
    subdir: 'pele/potentials',
    override_options : ['cython_language=cpp'],
    cython_args : cython_args,
)


py.extension_module(
    '_frozen_dof',
    ['_frozen_dof.pyx', ],
    include_directories: [inc_np, inc_pele],
    dependencies : [py_dep, pele_dep, cython_compile_dep,],
    install: true,
    subdir: 'pele/potentials',
    override_options : ['cython_language=cpp'],
    cython_args : cython_args,
)


py.extension_module(
    '_harmonic_cpp',
    ['_harmonic_cpp.pyx', ],
    include_directories: [inc_np, inc_pele],
    dependencies : [py_dep, pele_dep, cython_compile_dep,],
    install: true,
    subdir: 'pele/potentials',
    override_options : ['cython_language=cpp'],
    cython_args : cython_args,
)


py.extension_module(
    '_hs_wca_cpp',
    ['_hs_wca_cpp.pyx', ],
    include_directories: [inc_np, inc_pele],
    dependencies : [py_dep, pele_dep, cython_compile_dep,],
    install: true,
    subdir: 'pele/potentials',
    override_options : ['cython_language=cpp'],
    cython_args : cython_args,
)


py.extension_module(
    '_inversepower_cpp',
    ['_inversepower_cpp.pyx', ],
    include_directories: [inc_np, inc_pele],
    dependencies : [py_dep, pele_dep, cython_compile_dep,],
    install: true,
    subdir: 'pele/potentials',
    override_options : ['cython_language=cpp'],
    cython_args : cython_args,
)


py.extension_module(
    '_inversepower_stillinger_cpp',
    ['_inversepower_stillinger_cpp.pyx', ],
    include_directories: [inc_np, inc_pele],
    dependencies : [py_dep, pele_dep, cython_compile_dep,],
    install: true,
    subdir: 'pele/potentials',
    override_options : ['cython_language=cpp'],
    cython_args : cython_args,
)


py.extension_module(
    '_inversepower_stillinger_cut_cpp',
    ['_inversepower_stillinger_cut_cpp.pyx', ],
    include_directories: [inc_np, inc_pele],
    dependencies : [py_dep, pele_dep, cython_compile_dep,],
    install: true,
    subdir: 'pele/potentials',
    override_options : ['cython_language=cpp'],
    cython_args : cython_args,
)


py.extension_module(
    '_lj_cpp',
    ['_lj_cpp.pyx', ],
    include_directories: [inc_np, inc_pele],
    dependencies : [py_dep, pele_dep, cython_compile_dep,],
    install: true,
    subdir: 'pele/potentials',
    override_options : ['cython_language=cpp'],
    cython_args : cython_args,
)


py.extension_module(
    '_morse_cpp',
    ['_morse_cpp.pyx', ],
    include_directories: [inc_np, inc_pele],
    dependencies : [py_dep, pele_dep, cython_compile_dep,],
    install: true,
    subdir: 'pele/potentials',
    override_options : ['cython_language=cpp'],
    cython_args : cython_args,
)


py.extension_module(
    '_pele',
    ['_pele.pyx', ],
    include_directories: [inc_np, inc_pele],
    dependencies : [py_dep, pele_dep, cython_compile_dep,],
    install: true,
    subdir: 'pele/potentials',
    override_options : ['cython_language=cpp'],
    cython_args : cython_args,
)


py.extension_module(
    '_pspin_spherical_cpp',
    ['_pspin_spherical_cpp.pyx', ],
    include_directories: [inc_np, inc_pele],
    dependencies : [py_dep, pele_dep, cython_compile_dep,],
    install: true,
    subdir: 'pele/potentials',
    override_options : ['cython_language=cpp'],
    cython_args : cython_args,
)


py.extension_module(
    '_pythonpotential',
    ['_pythonpotential.pyx', ],
    include_directories: [inc_np, inc_pele],
    dependencies : [py_dep, pele_dep, cython_compile_dep,],
    install: true,
    subdir: 'pele/potentials',
    override_options : ['cython_language=cpp'],
    cython_args : cython_args,
)


py.extension_module(
    '_sumgaussianpot_cpp',
    ['_sumgaussianpot_cpp.pyx', ],
    include_directories: [inc_np, inc_pele],
    dependencies : [py_dep, pele_dep, cython_compile_dep,],
    install: true,
    subdir: 'pele/potentials',
    override_options : ['cython_language=cpp'],
    cython_args : cython_args,
)


py.extension_module(
    '_wca_cpp',
    ['_wca_cpp.pyx', ],
    include_directories: [inc_np, inc_pele],
    dependencies : [py_dep, pele_dep, cython_compile_dep,],
    install: true,
    subdir: 'pele/potentials',
    override_options : ['cython_language=cpp'],
    cython_args : cython_args,
)

subdir('fortran')
