add_executable(bench_cell_lists bench_cell_lists.cpp)
target_link_libraries(bench_cell_lists pele_lib)

add_executable(bench_cell_lists_alt bench_cell_lists_alt.cpp)
target_link_libraries(bench_cell_lists_alt pele_lib)

add_executable(bench_lj bench_lj.cpp)
target_link_libraries(bench_lj pele_lib)

add_executable(bench_minimization bench_minimization.cpp)
target_link_libraries(bench_minimization pele_lib)
