
connect_run_ui_source = custom_target(
 'connect_run_ui.py',
 input : 'connect_run_ui.ui',
 output : 'connect_run_ui.py',
 command : [pyuic, '@INPUT@', '-o', '@OUTPUT@'],
 install : true,
 install_dir : pydir/'pele/gui/ui',
)


cv_viewer_ui_source = custom_target(
 'cv_viewer_ui.py',
 input : 'cv_viewer_ui.ui',
 output : 'cv_viewer_ui.py',
 command : [pyuic, '@INPUT@', '-o', '@OUTPUT@'],
 install : true,
 install_dir : pydir/'pele/gui/ui',
)


dgraph_browser_source = custom_target(
 'dgraph_browser.py',
 input : 'dgraph_browser.ui',
 output : 'dgraph_browser.py',
 command : [pyuic, '@INPUT@', '-o', '@OUTPUT@'],
 install : true,
 install_dir : pydir/'pele/gui/ui',
)


graph_view_ui_source = custom_target(
 'graph_view_ui.py',
 input : 'graph_view_ui.ui',
 output : 'graph_view_ui.py',
 command : [pyuic, '@INPUT@', '-o', '@OUTPUT@'],
 install : true,
 install_dir : pydir/'pele/gui/ui',
)


nebbrowser_source = custom_target(
 'nebbrowser.py',
 input : 'nebbrowser.ui',
 output : 'nebbrowser.py',
 command : [pyuic, '@INPUT@', '-o', '@OUTPUT@'],
 install : true,
 install_dir : pydir/'pele/gui/ui',
)


rate_gui_source = custom_target(
 'rate_gui.py',
 input : 'rate_gui.ui',
 output : 'rate_gui.py',
 command : [pyuic, '@INPUT@', '-o', '@OUTPUT@'],
 install : true,
 install_dir : pydir/'pele/gui/ui',
)


show3d_with_slider_ui_source = custom_target(
 'show3d_with_slider_ui.py',
 input : 'show3d_with_slider_ui.ui',
 output : 'show3d_with_slider_ui.py',
 command : [pyuic, '@INPUT@', '-o', '@OUTPUT@'],
 install : true,
 install_dir : pydir/'pele/gui/ui',
)


ui_neb_explorer_source = custom_target(
 'ui_neb_explorer.py',
 input : 'ui_neb_explorer.ui',
 output : 'ui_neb_explorer.py',
 command : [pyuic, '@INPUT@', '-o', '@OUTPUT@'],
 install : true,
 install_dir : pydir/'pele/gui/ui',
)


ui_normalmode_explorer_source = custom_target(
 'ui_normalmode_explorer.py',
 input : 'ui_normalmode_explorer.ui',
 output : 'ui_normalmode_explorer.py',
 command : [pyuic, '@INPUT@', '-o', '@OUTPUT@'],
 install : true,
 install_dir : pydir/'pele/gui/ui',
)


ui_takestep_explorer_source = custom_target(
 'ui_takestep_explorer.py',
 input : 'ui_takestep_explorer.ui',
 output : 'ui_takestep_explorer.py',
 command : [pyuic, '@INPUT@', '-o', '@OUTPUT@'],
 install : true,
 install_dir : pydir/'pele/gui/ui',
)


resources_source = custom_target(
 'resources_rc.py',
 input : 'resources.qrc',
 output : 'resources_rc.py',
 command : [pyrcc, '@INPUT@', '-o', '@OUTPUT@'],
 install : true,
 install_dir : pydir/'pele/gui/ui',
)

